--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
     <div id="tela">
     </div>  
 
+    
     <script src="./front/views/montarTela.js"></script>
-    <script src="./front/models/tela.js"></script>
-
+    <script src="./front/views/tela.js"></script>
+    <script src="./front/models/tetrominos.js"></script>
+    <script src="./front/models/aleatorio.js"></script>
+    <script src="./front/models/rotacaoTetromino.js"></script>
+    <script src="./front/views/desenharTetromino.js"></script>
+    
 </body>
 </html>
