Inserindo funcao rotacao e descida

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="./front/models/paraDescida.js"></script>
     <script src="./front/models/moveEsquerda.js"></script>
     <script src="./front/models/moveDireita.js"></script>
+    <script src="./front/models/rotacao.js"></script>
     <script src="./front/controllers/controleSetas.js"></script>
     
     
